--- a/sites/all/themes/slac/sass/_layout.sass
+++ b/sites/all/themes/slac/sass/_layout.sass
@@ -3038,7 +3038,7 @@ h2
             border-left: 1px solid white
       a
         color: #fff
-        padding: 0 30px
+        padding: 0 20px
         font-size: 9px
         text-transform: uppercase
         line-height: 20px
